syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManager";

package br.com.zup.edu;

service KeyManagerService {
  rpc send (KeyManagerRequest) returns (KeyManagerResponse) {}
}

enum Chave {
  CPF = 0;
  CELULAR = 1;
  EMAIL = 2;
  CHAVE_ALEATORIA = 3;
}

enum ContaTipo {
  CONTA_CORRENTE =0;
  CONTA_POUPANCA = 1;
}

message KeyManagerRequest {
  string idClient = 1;
  Chave chave = 2;
  ContaTipo conta_tipo = 3;
}

message KeyManagerResponse {
  int64 pix_id = 1;
}

